@@ -1,0 +1,7 @@
+//
+// Prefix header for all source files of the 'CalendarHelloWorld' target in the 'CalendarHelloWorld' project.
+//
+
+#ifdef __OBJC__
+    #import <Foundation/Foundation.h>
+#endif
