@@ -1,0 +1,14 @@
+#!/bin/sh -x
+#
+# This script tries to move the built GData.framework 
+# into a place the example application's Copy Frameworks phase
+# will find it, regardless of whether projects are set to share
+# a build location or use the default build location
+
+# if the framework exists in the GData project's build directory,
+# copy it to this project's build directory
+
+if [ -d "$SRCROOT/../../Source/build/$CONFIGURATION/GData.framework" ] ; then
+  rm -rf "$BUILT_PRODUCTS_DIR/GData.framework"
+  cp -Rf "$SRCROOT/../../Source/build/$CONFIGURATION/GData.framework" "$BUILT_PRODUCTS_DIR"
+fi
